# pyWhooshConnect

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: black.yml  cd.yml  ci.yml  pylint.yml  pytest.yml
config/: power_zones_config.yml
pywhooshconnect/: __init__.py
pywhooshconnect/common/mapper/: base.py
pywhooshconnect/common/model/: generic_workout.py  generic_workout_step.py  workout_step_utils.py
pywhooshconnect/config/: power_zones_config.yml
pywhooshconnect/garmin/client/: GarminClient.py
pywhooshconnect/garmin/mapper/: garmin_to_generic_power_zones.py  garmin_to_generic_workout.py
pywhooshconnect/garmin/model/: garmin_scheduled_workout_dto.py  garmin_workout_dto.py
pywhooshconnect/garmin/service/: garmin_training_plan_service.py
pywhooshconnect/mywhoosh/mapper/: generic_to_mywhoosh.py  power_zones_config.py
pywhooshconnect/service/: workout_sync_service.py
src/: __init__.py
src/common/mapper/: base.py
src/common/model/: generic_workout.py  generic_workout_step.py  power_zones.py  workout_step_utils.py
src/garmin/client/: GarminClient.py
src/garmin/mapper/: garmin_to_generic.py  garmin_to_generic_power_zones.py  garmin_to_generic_workout.py
src/service/: workout_sync_service.py
test/common/: test_power_zones.py  test_workout_step_utils.py
test/resources/: garmin_workout.json
tests/common/: test_power_zones.py  test_workout_step_utils.py
tests/resources/: garmin_power_zones.json  garmin_workout.json
tests/service/: test_garmin_to_mywhoosh_sync_service.py
(+19 files in other folders)
